# rustvsgo

./: .gitignore
go/: go.mod  main.go
go/helloworldpb/: helloworld.pb.go  helloworld_grpc.pb.go
go/proto/: helloworld.proto
rust/: Cargo.toml
rust/proto/: helloworld.proto
rust/src/: client.rs  server.rs
